k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devspaces-demo
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: devspaces-demo
